test/1.4/errors/ETYPE_integer_t.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// ERROR ETYPE
extern uinteger_t undef_uval;
/// ERROR ETYPE
extern integer_t undef_val;
